--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,75 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/primeng/resources/primeng.min.css";
+@import "../node_modules/primeflex/primeflex.css";
+@import "../node_modules/primeicons/primeicons.css";
+html, body {
+  font-family: Montserrat,Muli, sans-serif;
+  font-size: calc(20px + 12 * (100vw - 320px) / 3840);
+  font-weight: 400;
+  overflow-x: hidden;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: Montserrat;
+  src: url(/assets/fonts/Montserrat-VariableFont_wght.ttf) format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+.full-width{
+  width: 100%;
+}
+
+.dark-blue{
+  color: #264653;
+}
+.green{
+  color: #2a9d8f;
+}
