--- a/src/app/components/suggestions/suggestions.component.html
+++ b/src/app/components/suggestions/suggestions.component.html
@@ -41,5 +41,5 @@
   </div>
 </div>
 <div class="flex justify-content-center full-width mt-4 mb-8">
-  <button pButton class="mt-4 find" (click)="findSuggestion()">Află sugestia</button>
+  <button pButton class="mt-4 find" (click)="findSuggestion()" [disabled]="isDisabled()">Află sugestia</button>
 </div>
